bison-yacc语法分析/json-parsing/json.output
Terminals unused in grammar

   SCAN_ERR


Grammar

    0 $accept: start $end

    1 start: object
    2      | array

    3 object: BEGIN_OBJECT END_OBJECT
    4       | BEGIN_OBJECT members END_OBJECT

    5 members: pair
    6        | members SEP_COMMA pair

    7 array: BEGIN_ARRAY END_ARRAY
    8      | BEGIN_ARRAY elements END_ARRAY

    9 elements: value
   10         | elements SEP_COMMA value

   11 pair: STRING SEP_COLON value

   12 value: INT
   13      | FLOAT
   14      | STRING
   15      | BOOLEAN
   16      | NULL_T
   17      | object
   18      | array


Terminals, with rules where they appear

$end (0) 0
error (256)
BEGIN_OBJECT (258) 3 4
END_OBJECT (259) 3 4
BEGIN_ARRAY (260) 7 8
END_ARRAY (261) 7 8
INT (262) 12
FLOAT (263) 13
STRING (264) 11 14
BOOLEAN (265) 15
NULL_T (266) 16
SEP_COLON (267) 11
SEP_COMMA (268) 6 10
SCAN_ERR (269)


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
start (16)
    on left: 1 2, on right: 0
object (17)
    on left: 3 4, on right: 1 17
members (18)
    on left: 5 6, on right: 4 6
array (19)
    on left: 7 8, on right: 2 18
elements (20)
    on left: 9 10, on right: 8 10
pair (21)
    on left: 11, on right: 5 6
value (22)
    on left: 12 13 14 15 16 17 18, on right: 9 10 11


State 0

    0 $accept: . start $end

    BEGIN_OBJECT  shift, and go to state 1
    BEGIN_ARRAY   shift, and go to state 2

    start   go to state 3
    object  go to state 4
    array   go to state 5


State 1

    3 object: BEGIN_OBJECT . END_OBJECT
    4       | BEGIN_OBJECT . members END_OBJECT

    END_OBJECT  shift, and go to state 6
    STRING      shift, and go to state 7

    members  go to state 8
    pair     go to state 9


State 2

    7 array: BEGIN_ARRAY . END_ARRAY
    8      | BEGIN_ARRAY . elements END_ARRAY

    BEGIN_OBJECT  shift, and go to state 1
    BEGIN_ARRAY   shift, and go to state 2
    END_ARRAY     shift, and go to state 10
    INT           shift, and go to state 11
    FLOAT         shift, and go to state 12
    STRING        shift, and go to state 13
    BOOLEAN       shift, and go to state 14
    NULL_T        shift, and go to state 15

    object    go to state 16
    array     go to state 17
    elements  go to state 18
    value     go to state 19


State 3

    0 $accept: start . $end

    $end  shift, and go to state 20


State 4

    1 start: object .

    $default  reduce using rule 1 (start)


State 5

    2 start: array .

    $default  reduce using rule 2 (start)


State 6

    3 object: BEGIN_OBJECT END_OBJECT .

    $default  reduce using rule 3 (object)


State 7

   11 pair: STRING . SEP_COLON value

    SEP_COLON  shift, and go to state 21


State 8

    4 object: BEGIN_OBJECT members . END_OBJECT
    6 members: members . SEP_COMMA pair

    END_OBJECT  shift, and go to state 22
    SEP_COMMA   shift, and go to state 23


State 9

    5 members: pair .

    $default  reduce using rule 5 (members)


State 10

    7 array: BEGIN_ARRAY END_ARRAY .

    $default  reduce using rule 7 (array)


State 11

   12 value: INT .

    $default  reduce using rule 12 (value)


State 12

   13 value: FLOAT .

    $default  reduce using rule 13 (value)


State 13

   14 value: STRING .

    $default  reduce using rule 14 (value)


State 14

   15 value: BOOLEAN .

    $default  reduce using rule 15 (value)


State 15

   16 value: NULL_T .

    $default  reduce using rule 16 (value)


State 16

   17 value: object .

    $default  reduce using rule 17 (value)


State 17

   18 value: array .

    $default  reduce using rule 18 (value)


State 18

    8 array: BEGIN_ARRAY elements . END_ARRAY
   10 elements: elements . SEP_COMMA value

    END_ARRAY  shift, and go to state 24
    SEP_COMMA  shift, and go to state 25


State 19

    9 elements: value .

    $default  reduce using rule 9 (elements)


State 20

    0 $accept: start $end .

    $default  accept


State 21

   11 pair: STRING SEP_COLON . value

    BEGIN_OBJECT  shift, and go to state 1
    BEGIN_ARRAY   shift, and go to state 2
    INT           shift, and go to state 11
    FLOAT         shift, and go to state 12
    STRING        shift, and go to state 13
    BOOLEAN       shift, and go to state 14
    NULL_T        shift, and go to state 15

    object  go to state 16
    array   go to state 17
    value   go to state 26


State 22

    4 object: BEGIN_OBJECT members END_OBJECT .

    $default  reduce using rule 4 (object)


State 23

    6 members: members SEP_COMMA . pair

    STRING  shift, and go to state 7

    pair  go to state 27


State 24

    8 array: BEGIN_ARRAY elements END_ARRAY .

    $default  reduce using rule 8 (array)


State 25

   10 elements: elements SEP_COMMA . value

    BEGIN_OBJECT  shift, and go to state 1
    BEGIN_ARRAY   shift, and go to state 2
    INT           shift, and go to state 11
    FLOAT         shift, and go to state 12
    STRING        shift, and go to state 13
    BOOLEAN       shift, and go to state 14
    NULL_T        shift, and go to state 15

    object  go to state 16
    array   go to state 17
    value   go to state 28


State 26

   11 pair: STRING SEP_COLON value .

    $default  reduce using rule 11 (pair)


State 27

    6 members: members SEP_COMMA pair .

    $default  reduce using rule 6 (members)


State 28

   10 elements: elements SEP_COMMA value .

    $default  reduce using rule 10 (elements)
